Fix overlapping images and horizontal and vertical scrollbars

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -4,8 +4,12 @@
 .about-container {
   width: 80%;
   background-color: $color-grey-light-1;
-  margin: 2rem 10%;
+  margin: 2rem 10% 5rem 10%;
   padding-bottom: 3rem;
+
+  @include respond(tab-land) {
+    margin-bottom: 9rem;
+  }
 }
 
 .about-center,
