--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -11,17 +11,28 @@
   background-color: #1B1B1B;
   width: 80%;
   height: 5rem;
-  margin: 0 10%;
+  margin: auto 10%;
+  position: fixed;
+  bottom: 0;
 
   @include respond(phone) {
     width: 100%;
-    margin: 0;
+    margin-left: 0 !important;
+    /* margin-right: 0; */
     padding-left: 1rem;
     padding-right: 1rem;
   }
 
   @include respond(tab-port) {
     height: 4.5rem;
+    margin: auto 10%;
+  }
+
+  @include respond(tab-land) {
+    /* height: 4.5rem; */
+    /* margin: auto 10%; */
+    /* bottom: 0; */
+    /* position: fixed; */
   }
 
   &__left {
