--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -3,7 +3,7 @@
 
 .home-container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: $color-black-dark;
 
   @include respond(phone) {
